# nopywer

./: .gitignore  202603050116_session_readme.md  AGENTS.md  README.md  analyze_grid.py  automatic_stuff.py  checkInventory.py  computeVDrop.py  cumulateCurrent.py  environment.yaml  function_select_layer_by_name.py  getChildren.py  getCoordinates.py  getGridGeometry.py  getLayer.py  get_constant_parameters.py  get_optimal_layout.py  get_user_parameters.py  inspectCableLayer.py  main.py  main_test.py  minimum_spanning_tree.py  printGridInfo.py  pyproject.toml  readSpreadsheet.py  readme.md  requirements.yaml  test_fct.py  tuto_IDE.py  tuto_selectLayer_showFieldnames.py  updateLayers.py  user_parameters.yaml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  index.html  index.md
nopywer/: __init__.py  analysis.py  automatic_stuff.py  check_inventory.py  computeVDrop.py  compute_voltage_drop.py  constants.py  core_objects.py  cumulateCurrent.py  cumulate_current.py  draw_layer.py  genetic_algo.py  getChildren.py  getCoordinates.py  getGridGeometry.py  getLayer.py  getLength.py  get_children.py  get_constant_parameters.py  get_coordinates.py  get_grid_geometry.py  get_layer.py  get_user_parameters.py  inspectCableLayer.py  inspect_cable_layer.py  io.py  logger_config.py  minimum_spanning_tree2.py  optimization_tools.py  optimize.py  printGridInfo.py  print_grid_info.py  readSpreadsheet.py  read_spreadsheet.py  test_logger.py  updateLayers.py  update_layers.py  writeSpreadsheet.py  write_spreadsheet.py
sandbox/: getFeatures.py  get_features.py  helloworld.py  test_fct.py  tuto_IDE.py  tuto_getLength.py  tuto_selectLayerByName.py  tuto_selectLayer_showFieldnames.py
src/nopywer/: __init__.py  analysis.py  analyze.py  api.py  cli.py  constants.py  genetic_algo.py  geometry.py  grid.py  inventory.py  io.py  models.py  optimize.py  optimize_milp.py
src/nopywer/frontend/: app.js  index.html  style.css
src/nopywer/frontend/data/: power-nodes.geojson
tests/: input_nodes.geojson  test_analyze.py  test_api.py  test_cli.py  test_geometry.py  test_grid.py  test_inventory.py  test_models.py  test_optimize.py
tests/api/: test_optimize_endpoint.py
tests/fixtures/: analyze_input.geojson  analyze_multiple_generators.geojson  analyze_named_generator.geojson  analyze_no_cables.geojson  api_no_generator.geojson  api_only_generator.geojson  input_nodes.geojson
tests/optimization/: test_contracts.py  test_optimize_milp.py
