[project]
name = "nopywer"
version = "1.0.0"
description = "Power grid analysis and optimization tool for festival sites"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "matplotlib>=3.10",
    "networkx>=3.4",
    "numpy>=2.0",
    "odfpy>=1.4",
    "pandas>=2.2",
    "pulp>=2.8",
    "pyproj>=3.6",
    "typer>=0.15",
]

[project.scripts]
nopywer-analyze = "nopywer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nopywer"]
