[project]
name = "nopywer"
version = "1.0.0"
description = "Power grid analysis and optimization tool for festival sites"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "fastapi>=0.115",
    "networkx>=3.4",
    "numpy>=2.0",
    "odfpy>=1.4",
    "pandas>=2.2",
    "pyproj>=3.6",
    "typer>=0.15",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.9",
]

[project.scripts]
nopywer-analyze = "nopywer.cli:app"
nopywer-server = "nopywer.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nopywer"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true
known-first-party = ["nopywer"]
