[project]
name = "nopywer"
version = "1.0.0"
description = "Power grid analysis and optimization tool for festival sites"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "fastapi>=0.135",
    "networkx>=3.6",
    "numpy>=2.4",
    "odfpy>=1.4",
    "pandas>=3.0",
    "pyproj>=3.7",
    "typer>=0.24",
    "uvicorn>=0.41",
]

[dependency-groups]
dev = [
    "httpx",
    "pre-commit>=4.5",
    "pytest>=9.0",
    "ruff>=0.15",
]

[project.scripts]
nopywer-analyze = "nopywer.cli:app"
nopywer-server = "nopywer.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nopywer"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true
known-first-party = ["nopywer"]
